--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,3 +1,19 @@
+.loading {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 50px 0;
+  color: white;
+  font-weight: bold;
+}
+
+
+.win {
+    color:rgb(62, 229, 62);
+}
+
+.loss {
+    color:rgb(236, 64, 64)
+}
 /* profile header */
 
 .profile-header {
@@ -244,10 +260,17 @@
 .link {
     display: flex;
     align-items: center;
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
 }
-
+.link a {
+    display: flex;
+    align-items: center;  
+}
+.link svg {
+    width: 100%;
+    height: 100%;
+}
 /* general  */
 .align-left {
     text-align: left;
