--- a/styles/rankings.css
+++ b/styles/rankings.css
@@ -22,7 +22,7 @@
     display: grid;
     text-align: center;
     padding: 15px;
-    grid-template-columns: 3fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 5px
 }
 
